--- a/1.3
+++ b/1.3
@@ -1,62 +1,40 @@
 #include <iostream>
-#include <windows.h>
+#include <bits/stdc++.h>
+using namespace std;
 
-// Function to set the text color in the console
-void set_color(int color_code) {
-    HANDLE hConsole = GetStdHandle(STD_OUTPUT_HANDLE);
-    SetConsoleTextAttribute(hConsole, color_code);
-}
-
-int main() {
+int main()
+{
     char op;
-    float num1, num2;
+    float N1, N2, result;
 
-    set_color(11); // Light Cyan for the title
-    std::cout << "--- C++ Calculator ---" << std::endl;
-    set_color(7); // Reset to default white
+    cout << "Enter operator (+, -, *, /): ";
+    cin >> op;
 
-    while (true) {
-        set_color(14); // Yellow for operator prompt
-        std::cout << "\nEnter operator (+, -, *, /) or 'x' to exit: ";
-        std::cin >> op;
+    cout << "Enter first operands: ";
+    cin >> N1;
+    cout << "Enter second operands: ";
+    cin >> N2;
 
-        if (op == 'x' || op == 'X') {
+
+    switch(op){
+        case '+'://แสดงผล
+            result = N1 + N2;
             break;
-        }
-
-        set_color(10); // Green for number prompts
-        std::cout << "Enter two operands: ";
-        std::cin >> num1 >> num2;
-
-        set_color(13); // Light Purple for the result
-        switch(op) {
-            case '+':
-                std::cout << "Result: " << num1 + num2 << std::endl;
-                break;
-            case '-':
-                std::cout << "Result: " << num1 - num2 << std::endl;
-                break;
-            case '*':
-                std::cout << "Result: " << num1 * num2 << std::endl;
-                break;
-            case '/':
-                if (num2 != 0) {
-                    std::cout << "Result: " << num1 / num2 << std::endl;
-                } else {
-                    set_color(12); // Red for error
-                    std::cout << "Error! Division by zero is not allowed." << std::endl;
-                }
-                break;
-            default:
-                set_color(12); // Red for error
-                std::cout << "Error! Invalid operator." << std::endl;
-        }
-        set_color(7); // Reset to default white
+        case '-':
+            result = N1 - N2;
+            break;
+        case '*':
+            result = N1 * N2;
+            break;
+        case '/':
+            result = N1 / N2;
+            break;
+    default:
+        cout << "Error! operator is not correct";
+        result = -DBL_MAX;
+        break;
     }
-
-    set_color(11); // Light Cyan for exit message
-    std::cout << "\nExiting calculator. Goodbye!" << std::endl;
-    set_color(7); // Reset to default white
-
+        if (result != -DBL_MAX)
+            cout << N1 <<  op  << N2 << " = " << result ;
     return 0;
 }
